// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainAccountPage /> mainAccountPage banking button test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "flex": 1,
      },
      {
        "flexDirection": "column",
        "padding": 5,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#5686f2",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 80,
          },
          {
            "color": "white",
          },
          {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Bank Accounts
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 80,
          },
          {
            "color": "white",
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Cryptocurrency
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#55a755",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 80,
          },
          {
            "color": "white",
          },
          {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Stock Accounts
    </Text>
  </View>
</View>
`;

exports[`<MainAccountPage /> mainAccountPage cryptocurrency button test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "flex": 1,
      },
      {
        "flexDirection": "column",
        "padding": 5,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#5686f2",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 80,
          },
          {
            "color": "white",
          },
          {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Bank Accounts
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 80,
          },
          {
            "color": "white",
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Cryptocurrency
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#55a755",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 80,
          },
          {
            "color": "white",
          },
          {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Stock Accounts
    </Text>
  </View>
</View>
`;

exports[`<MainAccountPage /> mainAccountPage snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "flex": 1,
      },
      {
        "flexDirection": "column",
        "padding": 5,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#5686f2",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text />
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Bank Accounts
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text />
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Cryptocurrency
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#55a755",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text />
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Stock Accounts
    </Text>
  </View>
</View>
`;

exports[`<MainAccountPage /> mainAccountPage stocks button test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "flex": 1,
      },
      {
        "flexDirection": "column",
        "padding": 5,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#5686f2",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 80,
          },
          {
            "color": "white",
          },
          {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Bank Accounts
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 80,
          },
          {
            "color": "white",
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Cryptocurrency
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#55a755",
        "borderRadius": 15,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-evenly",
        "margin": 5,
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 80,
          },
          {
            "color": "white",
          },
          {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 23,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Stock Accounts
    </Text>
  </View>
</View>
`;
